//
// Protocol buffers definition for Silo server
//
syntax = "proto3";
package pt.tecnico.sauron.silo.grpc;

import "google/type/latlng.proto";
import "google/protobuf/timestamp.proto";

message Cam {
    string name = 1;
    google.type.LatLng coords = 2;
}

message JoinRequest {
    Cam cam = 1;
}

message JoinResponse {
    // empty
    // On error, status message will be sent
}

message InfoRequest {
    string name = 1;
}

message InfoResponse {
    google.type.LatLng coords = 1;
}

enum ObservationType {
    UNSPEC = 0;
    CAR = 1;
    PERSON = 2;
}

message Observation {
    ObservationType type = 1;
    string observationId = 2;
}

message ReportRequest {
    string camName = 1;
    repeated Observation observations = 2;
}

message ReportResponse {
    int32 numAcked = 1;
    repeated string errors = 2;
}

service ReportService {
    rpc CamJoin(JoinRequest) returns (JoinResponse);
    rpc CamInfo(InfoRequest) returns (InfoResponse);
    rpc Report(ReportRequest) returns (ReportResponse);
}

message TrackRequest {
    ObservationType type = 1;
    string id = 2;
}

message TrackResponse {
    Observation observation = 1;
    google.protobuf.Timestamp timestamp = 2;
    Cam cam = 3;
}

message TrackMatchRequest {
    ObservationType type = 1;
    string pattern = 2;
}

message TrackMatchResponse {
    Observation observation = 1;
    google.protobuf.Timestamp timestamp = 2;
    Cam cam = 3;
}

message TraceRequest {
    ObservationType type = 1;
    string id = 2;
}

message TraceResponse {
    Observation observation = 1;
    google.protobuf.Timestamp timestamp = 2;
    Cam cam = 3;
}

service QueryService {
    rpc Track (TrackRequest) returns (TrackResponse);
    rpc TrackMatch (TrackMatchRequest) returns (stream TrackMatchResponse);
    rpc Trace (TraceRequest) returns (stream TraceResponse);
}

message PingRequest {
    string text = 1;
}

message PingResponse {
    string text = 1;
}

message ClearRequest {
    // empty
}

message ClearResponse {
    // empty
}

message InitCamRequest {
    Cam cam = 1;
}

message InitObservationRequest {
    Observation observation = 1;
    google.protobuf.Timestamp timestamp = 2;
    Cam cam = 3;
}

message InitResponse {
    // empty
}

service ControlService {
    rpc Ping(PingRequest) returns (PingResponse);
    rpc Clear(ClearRequest) returns (ClearResponse);
    rpc InitCams(stream InitCamRequest) returns (InitResponse);
    rpc InitObservations(stream InitObservationRequest) returns (InitResponse);
}
